log

Thu 14 Mar 2024 08:30:59 PM UTC: 
 exercises.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:44:7: error: unused variable ‘i’ [-Werror=unused-variable]
   44 |   int i = 0;
      |       ^
exercises.c:43:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   43 |   int *newArr = malloc(sizeof(int) * size);
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7152743
